# compensator

./: CMakeLists.txt  LICENSE  README.md  compensator.cpp  compensator.h
examples/: CMakeLists.txt  compensator_component.cpp  compensator_component.h  main.cpp
matrix/: helper_functions.hpp  math.hpp  stdlib_imports.hpp
